--- a/examples/leaflet.html
+++ b/examples/leaflet.html
@@ -32,7 +32,7 @@
           attribution: 'Stamen'
         }).addTo(map);
 
-        cartodb.createLayer(map, 'http://documentation.cartodb.com/api/v2/viz/2b13c956-e7c1-11e2-806b-5404a6a683d5/viz.json')
+        cartodb.createLayer(map, 'https://arkegeomatica.carto.com/api/v2/viz/9a26fc0a-96e6-11e6-92ba-0e8c56e2ffdb/viz.json')
             .addTo(map)
          .on('done', function(layer) {
 
